@@ -23,7 +23,7 @@ S3method(ShowSubset,CaseAttr)
 S3method(ShowSubset, caseName)
 S3method(ShowSubset,FileAttr)
 S3method(print,codingsByOne)
-S3method(print,memos)
+S3method(print,Info4Widget)
 S3method(plot, crossCodes)
 import(RGtk2)
 import(gWidgetsRGtk2)
